--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <h1>Gleb Blumental</h1>
 <h2>This page will be used as my portfolio</h2>
 
+<img src="/images/download.jpeg">
 <p>
     About me:
 </p>
@@ -36,11 +37,12 @@
     <li>Docker</li>
     <li>AWS</li>
     <li>MySQL</li>
+    <li>CI/CD</li>
 </ul>
 
 <h2>My projects</h2>
 <ul>
-    <li>Blank for now</li>
+    <li><a href="https://github.com/Gleb-Blumental/happy_doggies" target="_blank">Happy doggies app</li>
 </ul>
 
 <h2>My <a href="https://www.linkedin.com/in/gleb-blumental-7a74b11ba/" target="_blank">LinkedIn</a></h2>
